# stat_project

./: README.md
tools/code_stat/: main.js  package.json
tools/preprocess/basic_preprocessor/: CMakeLists.txt  basic_preprocessor.hpp  file_handle.hpp  main.cpp
tools/preprocess/comment_remover/: comment_remover_cstyle.py  comment_remover_python_style.py
